removed smell codes